--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "hawk": "^6.0.2",
     "jquery": "^3.2.1"
   },
-  "devDependencies": {
-    "nano-static-server": "^1.0.0",
+  "dependencies": {
     "webpack": "^3.10.0"
+  },
+  "devDependencies": {
+    "nano-static-server": "^1.0.0"
   },
   "scripts": {
     "start": "npm run serve | npm run watch",
